fix overflow issue

--- a/thegrill/src/App.css
+++ b/thegrill/src/App.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .content {
   width: 100%;
   display: flex;
