--- a/thegrill/src/components/About.css
+++ b/thegrill/src/components/About.css
@@ -1,22 +1,26 @@
 .about {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .inside-mouth {
   display: block;
-  position: absolute;
   width: 100%;
+  position: absolute;
+  top: 0;
 }
 
 .about-content {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   width: 100%;
-  height: 90vh;
+  position: absolute;
+  bottom: 10vh;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .about-content > * {
@@ -24,13 +28,13 @@
 }
 
 .about-content h1 {
-  font-size: 5rem;
+  font-size: 4.5rem;
   text-align: center;
   font-family: 'Font-On-A-Grain';
 }
 
 .about-content p {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-align: center;
   font-family: 'Ashcan';
   width: 100%;
@@ -42,10 +46,10 @@
   }
 
   .about-content h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .about-content p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 }
